force-app/main/default/objects/OI_Scan_Progress__e/OI_Scan_Progress__e.object-meta.xml
<CustomObject>
    <label>OI Scan Progress</label>
    <pluralLabel>OI Scan Progress</pluralLabel>
    <description>Live scan-progress push for oiScanStatusPanel (Roadmap Phase 1 exit criteria — "visible progress", Backlog MS-4/UI-7). Minimal payload by design (Sprint 9) — this is a UI progress signal, not an audit log (OI_Log_Event__e/OI_Log__c already cover that).</description>
</CustomObject>