force-app/main/default/objects/OI_Scan_Progress__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>Text</type>
    <length>255</length>
    <description>Short, human-readable progress line — deliberately not a LongTextArea; this is a UI status line, not a log.</description>
</CustomField>