force-app/main/default/objects/OI_Scan_Progress__e/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <label>Metadata Type</label>
    <type>Text</type>
    <length>80</length>
    <description>The componentKind currently being scanned, blank for run-level (start/complete) events.</description>
</CustomField>