force-app/main/default/objects/OI_Scan_Progress__e/fields/Scan_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Scan_Run_Id__c</fullName>
    <label>Scan Run Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>