force-app/main/default/objects/OI_Scan_Progress__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <description>Mirrors OI_Scan_Run__c.Status__c's values (Text, not Picklist, to avoid a second picklist needing to stay in sync with the sObject's).</description>
</CustomField>